tests/behavior/success/memcpy_zero_size.bz
function main()
{
	__builtin_trivially_copy_values(null as ?*mut int32, null as ?*int32, 0);
	__builtin_memcpy(null, null, 0);
}
