tests/behavior/error/optional_get_mut_value_ref2.bz
function main()
{
	mut p: ?*int32 = null;

	__builtin_optional_get_mut_value_ref(p);
}
